option('gtk3',
       description: 'Whether to build GTK 3 widget library',
       type: 'boolean',
       value: true)

option('introspection',
       description: 'Whether to build introspection files',
       type: 'boolean',
       value: true)
option('gtk_doc',
       description: 'Whether to build the API reference',
       type: 'boolean',
       value: false)
