option('gtk3',
       description: 'Whether to build GTK 3 widget library',
       type: 'boolean',
       value: true)
option('gtk4',
       description: 'Whether to build GTK 4 widget library',
       type: 'boolean',
       value: true)

option('introspection',
       description: 'Whether to build introspection files',
       type: 'boolean',
       value: true)
option('gtk_doc',
       description: 'Whether to build the API reference',
       type: 'boolean',
       value: false)
option('shared_lib',
       description: 'Whether to build a shared library',
       type: 'boolean',
       value: true)

option('examples',
       description : 'Whether to build example programs',
       type: 'boolean',
       value: true)
